# Arc

./: .gitignore  Cargo.toml  LICENSE  README.md  arc_app  arc_out.ll  system.arcaea  test_abs.arc  test_bridge.arc  test_bridge_advanced.arc  test_calc.arc  test_func_aot.arc  test_if.arc  test_py.arc  test_system.arc  test_use.arc  test_while.arc
actp-compiler/: Cargo.toml
actp-compiler/src/: main.rs
arc-cli/: Cargo.toml
arc-cli/src/: main.rs  python_bridge.rs
arc-core/: Cargo.toml
arc-core/src/: codegen.rs  lib.rs
arc-lsp/: Cargo.toml
arc-lsp/src/: main.rs
arcaea-os/: Cargo.toml  linker.ld
arcaea-os/.cargo/: config.toml
arcaea-os/src/: allocator.rs  context.rs  generated.rs  log.rs  main.rs  paging.rs  task.rs  trap.rs
arcaea-os/src/arcaea-os/src/boot/: entry.asm
arcaea-vscode/: package.json
arcaea-vscode/syntaxes/: arcaea.tmLanguage.json
arcaea_store/: current
arcaea_store/gen-39641966/: nginx.conf
examples/: bridge_c.arc  factorial.arc  modular.arc  system.arcaea
my_rust_tool/: Cargo.toml
my_rust_tool/src/: main.rs
std/: math.arc
