[package]
name = "arcaea-os"
version = "0.1.0"
edition = "2021"

[dependencies]
# 使用 0.9.23 或 0.9.34 均可，不需要開啟任何 features
bootloader = "0.9.23"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
    "-no-reboot"
]